--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,12 +15,12 @@
   </error-page>
   
   <servlet>  
-		<servlet-name>hostelspage</servlet-name>  
-		<servlet-class>hostelsload_jsp</servlet-class>  
+		<servlet-name>hregister</servlet-name>  
+		<servlet-class>com.servlet.hostels.HostelsRegister</servlet-class>  
 	</servlet>  
   
 	<servlet-mapping>  
-		<servlet-name>hostelspage</servlet-name>  
-		<url-pattern>/Hostels</url-pattern>  
+		<servlet-name>hregister</servlet-name>  
+		<url-pattern>/hostelRegister</url-pattern>  
 	</servlet-mapping>  
 </web-app>
